--- a/ControledeContatos/appsettings.json
+++ b/ControledeContatos/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DataBase": "Data Source=DESKTOP-2P2AHI0\\SQLEXPRESS;Initial Catalog=DB_SistemaContatos; Integrated Security= SSPI;TrustServerCertificate=True"
+  },
   "AllowedHosts": "*"
 }
