Envio de Mensagem alterar senha

--- a/ControledeContatos/appsettings.json
+++ b/ControledeContatos/appsettings.json
@@ -8,5 +8,14 @@
   "ConnectionStrings": {
     "DataBase": "Data Source=DESKTOP-2P2AHI0\\SQLEXPRESS;Initial Catalog=DB_SistemaContatos; Integrated Security= SSPI;TrustServerCertificate=True"
   },
+
+  "SMTP": {
+    "UserName": "gamesvicio@hotmail.com",
+    "Nome": "Sistemas de Contatos",
+    "Host": "smtp-mail.outlook.com",
+    "Senha": "code@CODE22",
+    "Porta": 587
+  },
+
   "AllowedHosts": "*"
 }
