--- a/ControledeContatos/appsettings.json
+++ b/ControledeContatos/appsettings.json
@@ -10,9 +10,9 @@
   },
 
   "SMTP": {
-    "UserName": "gamesvicio@hotmail.com",
-    "Nome": "Sistemas de Contatos",
-    "Host": "smtp-mail.outlook.com",
+    "UserName": "ochamaaqui@hotmail.com",
+    "Nome": "Sistema de Contatos",
+    "Host": "smtp.office365.com",
     "Senha": "code@CODE22",
     "Porta": 587
   },
